# OrthoBaA

./: .gitignore  HOWTO_ICON.md  LICENSE  OrthoBaA.py  README.md  app.py  build_appimage.sh  build_mac.sh  build_win.bat  install_linux.sh  pyproject.toml  requirements.txt
.github/workflows/: appimage.yml  build.yml
assets/Icons/: README.txt
assets/Icons/repo-snippets/: AppRun  ipa-fixer.desktop
assets/Icons/repo-snippets/icons/: ipa-fixer.icns
ortho_baa/: config.py  exporters.py  logic.py  main.py  resources.py  ui.py  utils.py
